# ssphd

./: .gitignore  MANIFEST.in  abbr.md  abbr.yaml  beforefilter.json  build.py  built.html  ch-concat.html  ch-concat.json  ch-concat.md  ch1.html  ch1.md  ch2.html  ch2.md  chicago-note-bibliography.csl  chunk.html  concatenated.epub  concatenated.md  config.yaml  config.yml  cross-references-test.html  cross-references-test.md  default.css  defaulttemplate.html  documents.json  example.config.yaml  figs.json  figs.md  filter.py  headersfigtableseqs.json  headersfigtableseqs.md  headersfigtableseqsprocessed.md  license.md  linkdict.json  linkdict.txt  links-filter-toc.py  links-filter.py  links.json  manifesto.md  md  (+50 more)
-/: -and-a-level-3-section.html  -introduction.html  -references.html  -subsection-5-which-is-unfortunately-unnumbered.html  -to-do.html  -what-i-want-to-have-in-the-.md-source.html  1-markdown-kitchen-sink.html  1.0.0.0.1-table-of-contents.html  1.1-headers.html  10-abbreviations.html  10.1-test-in-titles-yes-and-even-in-toc.html  10.1.1-this-is-a-sub-section.html  11-and-a-chapter.html  11.1-and-a-level-2-section.html  11.2-markdown-formatting-in-section-headings.html  12-what-if-two-headings-have-the-same-title.html  12.1-this-is-a-title.html  12.2-this-is-a-title-1.html  13-lists-1.html  2-h1.html  2.1-h2.html  2.1.1-h3.html  2.1.1.1-h4.html  2.1.1.1.1-h5.html  2.1.1.1.1.1-h6.html  3-alt-h1.html  3.1-alt-h2.html  3.10-horizontal-rule.html  3.11-line-breaks.html  3.12-youtube-videos.html  3.2-emphasis.html  3.3-lists.html  3.4-links.html  3.5-images.html  (+31 more)
(+675 files in other folders)
